--- a/golden-quinoa-apple-crisp.html
+++ b/golden-quinoa-apple-crisp.html
@@ -11,9 +11,9 @@
     nav a:hover { text-decoration: underline; }
     .container { padding: 2rem; max-width: 800px; margin: auto; }
     h1 { color: #2c3e50; }
-    p { font-size: 1.1rem; }
-    ul { list-style: none; padding-left: 0; }
-    li { margin-bottom: 0.5rem; }
+    h2 { color: #34495e; }
+    p, li { font-size: 1.1rem; }
+    ul, ol { margin-top: 0; }
   </style>
 </head>
 <body>
@@ -24,7 +24,24 @@
   </nav>
   <div class="container">
     <h1>Golden Quinoa Apple Crisp</h1>
-    <p>Warm, cinnamon-spiced dessert made with quinoa, baked apples, and almond-oat topping.</p>
+    
+        <h2>Ingredients:</h2>
+        <ul>
+          <li>2 large apples, sliced</li>
+          <li>1 Tbsp lemon juice</li>
+          <li>½ tsp cinnamon</li>
+          <li>½ cup cooked quinoa</li>
+          <li>¼ cup rolled oats</li>
+          <li>2 Tbsp almond flour</li>
+          <li>2 Tbsp maple syrup</li>
+        </ul>
+        <h2>Instructions:</h2>
+        <ol>
+          <li>Toss apples with lemon juice and cinnamon. Place in a small baking dish.</li>
+          <li>Mix quinoa, oats, almond flour, and maple syrup for the topping.</li>
+          <li>Spread over apples and bake at 375°F for 25 minutes.</li>
+        </ol>
+        
   </div>
 </body>
 </html>
