--- a/key-west-street-tacos.html
+++ b/key-west-street-tacos.html
@@ -11,9 +11,9 @@
     nav a:hover { text-decoration: underline; }
     .container { padding: 2rem; max-width: 800px; margin: auto; }
     h1 { color: #2c3e50; }
-    p { font-size: 1.1rem; }
-    ul { list-style: none; padding-left: 0; }
-    li { margin-bottom: 0.5rem; }
+    h2 { color: #34495e; }
+    p, li { font-size: 1.1rem; }
+    ul, ol { margin-top: 0; }
   </style>
 </head>
 <body>
@@ -24,7 +24,25 @@
   </nav>
   <div class="container">
     <h1>Key West Street Tacos</h1>
-    <p>Grilled cumin-spiced fish in tortillas with avocado-mango salsa and cabbage slaw.</p>
+    
+        <h2>Ingredients:</h2>
+        <ul>
+          <li>1 lb white fish (snapper or cod)</li>
+          <li>1 tsp ground cumin</li>
+          <li>1 tsp chili powder</li>
+          <li>2 tsp lime juice</li>
+          <li>Small corn tortillas</li>
+          <li>1 cup shredded cabbage</li>
+          <li>1 avocado, diced</li>
+          <li>½ cup diced mango</li>
+        </ul>
+        <h2>Instructions:</h2>
+        <ol>
+          <li>Season fish with cumin, chili powder, and lime juice.</li>
+          <li>Sauté or grill until flaky.</li>
+          <li>Warm tortillas and top with fish, cabbage, avocado, and mango.</li>
+        </ol>
+        
   </div>
 </body>
 </html>
