--- a/autumn-ember-soup.html
+++ b/autumn-ember-soup.html
@@ -11,9 +11,9 @@
     nav a:hover { text-decoration: underline; }
     .container { padding: 2rem; max-width: 800px; margin: auto; }
     h1 { color: #2c3e50; }
-    p { font-size: 1.1rem; }
-    ul { list-style: none; padding-left: 0; }
-    li { margin-bottom: 0.5rem; }
+    h2 { color: #34495e; }
+    p, li { font-size: 1.1rem; }
+    ul, ol { margin-top: 0; }
   </style>
 </head>
 <body>
@@ -24,7 +24,25 @@
   </nav>
   <div class="container">
     <h1>Autumn Ember Soup</h1>
-    <p>Roasted carrots, sweet potatoes, and smoky paprika blended into a vibrant, warming soup. Finished with lime for brightness.</p>
+    
+        <h2>Ingredients:</h2>
+        <ul>
+          <li>1 lb carrots, chopped</li>
+          <li>1 sweet potato, diced</li>
+          <li>1 small onion, chopped</li>
+          <li>2 cloves garlic</li>
+          <li>1 tsp smoked paprika</li>
+          <li>4 cups ChefRich vegetable stock</li>
+          <li>Salt & pepper to taste</li>
+          <li>Juice of 1 lime</li>
+        </ul>
+        <h2>Instructions:</h2>
+        <ol>
+          <li>Roast carrots, sweet potato, and onion at 400°F for 25 minutes.</li>
+          <li>Blend with garlic, paprika, and vegetable stock until smooth.</li>
+          <li>Simmer for 10 mins, season to taste, and finish with lime juice.</li>
+        </ol>
+        
   </div>
 </body>
 </html>
