--- a/coconut-rice.html
+++ b/coconut-rice.html
@@ -11,9 +11,9 @@
     nav a:hover { text-decoration: underline; }
     .container { padding: 2rem; max-width: 800px; margin: auto; }
     h1 { color: #2c3e50; }
-    p { font-size: 1.1rem; }
-    ul { list-style: none; padding-left: 0; }
-    li { margin-bottom: 0.5rem; }
+    h2 { color: #34495e; }
+    p, li { font-size: 1.1rem; }
+    ul, ol { margin-top: 0; }
   </style>
 </head>
 <body>
@@ -24,7 +24,24 @@
   </nav>
   <div class="container">
     <h1>ChefRich Coconut Rice</h1>
-    <p>Aromatic coconut rice made with organic coconut milk and shredded coconut.</p>
+    
+        <h2>Ingredients:</h2>
+        <ul>
+          <li>1½ cups jasmine, basmati, or brown rice</li>
+          <li>2 cups full-fat organic coconut milk</li>
+          <li>2 cups water</li>
+          <li>½ tsp sea salt</li>
+          <li>2½ Tbsp unsweetened shredded coconut</li>
+          <li>1 Tbsp organic coconut oil (or avocado oil)</li>
+        </ul>
+        <h2>Instructions:</h2>
+        <ol>
+          <li>Rub oil on the bottom of a medium pot with a tight lid.</li>
+          <li>Add rice, coconut milk, water, salt, and shredded coconut. Stir to combine.</li>
+          <li>Bring to a boil, reduce to simmer, cover, and cook until tender (30–40 mins).</li>
+          <li>Let sit covered 5 minutes before fluffing with a fork.</li>
+        </ol>
+        
   </div>
 </body>
 </html>
