--- a/healing-miso-soup.html
+++ b/healing-miso-soup.html
@@ -11,9 +11,9 @@
     nav a:hover { text-decoration: underline; }
     .container { padding: 2rem; max-width: 800px; margin: auto; }
     h1 { color: #2c3e50; }
-    p { font-size: 1.1rem; }
-    ul { list-style: none; padding-left: 0; }
-    li { margin-bottom: 0.5rem; }
+    h2 { color: #34495e; }
+    p, li { font-size: 1.1rem; }
+    ul, ol { margin-top: 0; }
   </style>
 </head>
 <body>
@@ -24,7 +24,25 @@
   </nav>
   <div class="container">
     <h1>Healing Miso Soup</h1>
-    <p>A restorative miso broth with mushrooms, spinach, and kelp noodles.</p>
+    
+        <h2>Ingredients:</h2>
+        <ul>
+          <li>4 cups water</li>
+          <li>2 Tbsp mellow white miso</li>
+          <li>1 cup spinach</li>
+          <li>½ cup sliced mushrooms</li>
+          <li>½ cup kelp noodles</li>
+          <li>1 tsp grated ginger</li>
+          <li>1 tsp sesame oil (optional)</li>
+        </ul>
+        <h2>Instructions:</h2>
+        <ol>
+          <li>Bring water to a light simmer, add mushrooms and ginger.</li>
+          <li>Add spinach and kelp noodles, cook 3 minutes.</li>
+          <li>Turn off heat. Stir miso into a small bowl of hot broth, then add back.</li>
+          <li>Drizzle with sesame oil before serving if desired.</li>
+        </ol>
+        
   </div>
 </body>
 </html>
