--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     nav a:hover { text-decoration: underline; }
     .container { padding: 2rem; max-width: 800px; margin: auto; }
     h1 { color: #2c3e50; }
-    p { font-size: 1.1rem; }
-    ul { list-style: none; padding-left: 0; }
-    li { margin-bottom: 0.5rem; }
+    h2 { color: #34495e; }
+    p, li { font-size: 1.1rem; }
+    ul, ol { margin-top: 0; }
   </style>
 </head>
 <body>
@@ -24,7 +24,7 @@
   </nav>
   <div class="container">
     <h1>ChefRich.com – Home</h1>
-    <p>Your Kitchen is Your Pharmacy. Your Plate is Your Prescription.</p>
+    Your Kitchen is Your Pharmacy. Your Plate is Your Prescription.
   </div>
 </body>
 </html>
