--- a/recipes.html
+++ b/recipes.html
@@ -11,9 +11,9 @@
     nav a:hover { text-decoration: underline; }
     .container { padding: 2rem; max-width: 800px; margin: auto; }
     h1 { color: #2c3e50; }
-    p { font-size: 1.1rem; }
-    ul { list-style: none; padding-left: 0; }
-    li { margin-bottom: 0.5rem; }
+    h2 { color: #34495e; }
+    p, li { font-size: 1.1rem; }
+    ul, ol { margin-top: 0; }
   </style>
 </head>
 <body>
@@ -24,13 +24,13 @@
   </nav>
   <div class="container">
     <h1>ChefRich Recipes</h1>
-    <p><ul>
+    <ul>
         <li><a href="coconut-rice.html">ChefRich Coconut Rice</a></li>
         <li><a href="autumn-ember-soup.html">Autumn Ember Soup</a></li>
         <li><a href="key-west-street-tacos.html">Key West Street Tacos</a></li>
         <li><a href="golden-quinoa-apple-crisp.html">Golden Quinoa Apple Crisp</a></li>
         <li><a href="healing-miso-soup.html">Healing Miso Soup</a></li>
-        </ul></p>
+        </ul>
   </div>
 </body>
 </html>
